--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Password Generator</h1>
+        <h1>Unique Password Generator</h1>
       </header>
       <div class="card">
         <div class="card-header">
-          <h2>Generate a Password</h2>
+          <h2>Generate a Password by clicking below</h2>
         </div>
         <div class="card-body">
           <textarea
             readonly
-            id="password"
+            id="password"ß
             placeholder="Your Secure Password"
             aria-label="Generated Password"
           ></textarea>
